base classes were created and modyfied for Spring Data JPA usage